<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_asdasdasdasd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="brewery.giacomo.com.mybrewery.BeerDisplay"
    tools:showIn="@layout/beer_display">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:id="@+id/infos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">
                <ImageView
                    android:id="@+id/pic"
                    android:layout_width="356px"
                    android:layout_height="356px"
                    android:layout_marginRight="@dimen/margin_right"
                    android:background="@drawable/pic"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beer_name"
                    android:layout_toEndOf="@+id/pic"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:textSize="@dimen/name"
                    android:textColor="@color/listText"
                    android:textStyle="bold"
                    android:layout_alignParentTop="true"
                    android:id="@+id/name" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/infos">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    android:text="@string/description"/>
                <TextView
                    android:id="@+id/abv"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_below="@+id/description"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_list_title"
                    android:layout_height="wrap_content"
                    android:text="@string/abv"/>

                <TextView
                    android:id="@+id/srm"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_below="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_toEndOf="@+id/ibu"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/text_list_title"
                    android:layout_height="wrap_content"
                    android:text="@string/abv"/>
                <TextView
                    android:id="@+id/og"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_below="@+id/description"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_list_title"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/srm"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/abv"/>

                <TextView
                    android:id="@+id/ibu"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_list_title"
                    android:layout_height="wrap_content"
                    android:text="@string/abv"
                    android:layout_below="@+id/description"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@+id/abv" />
                <TextView
                    android:id="@+id/available"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_list_title"
                    android:layout_height="wrap_content"
                    android:text="@string/available"
                    android:layout_below="@+id/abv"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true" />

                </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
